--- a/_data/profiles.yml
+++ b/_data/profiles.yml
@@ -316,3 +316,9 @@ profiles:
     Place: 'Massachusetts, USA'
     Bio: 'Self taught coder & a Student of Life'
     GitHub: 'https://github.com/zotamias'
+    
+    Name: 'Raj Singh'
+    Place: 'Mumbai, India'
+    Bio: 'Self taught coder'
+    GitHub: 'https://github.com/rajsinh2181'
+    
